--- a/READme
+++ b/READme
@@ -1,7 +1,7 @@
 # ASP.NET Project with SQL Server Database of student 00015608
 
 ## Project Overview
-This is an ASP.NET web application built using ASP.NET Core and integrates a SQL Server database for data storage and management. The project is designed to Course work for Web application development module of student 00015608. The database is included within the project structure, utilizing Entity Framework Core for data access and management.
+This application was developed for Web Application module, as coursework portfolio project @ WIUT by student ID: 00015608. The database is included within the project structure, utilizing Entity Framework Core for data access and management.
 
 ## Features
 - **ASP.NET Core**: A robust web framework for building modern, cloud-based, internet-connected applications.
